--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -17,3 +17,115 @@ a {
   text-decoration: none;
   list-style: none;
 }
+
+.container {
+  width: 1170px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+.active {
+  color: #26748f !important;
+}
+.button_light {
+  width: 200px;
+  height: 45px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 5px;
+
+  transition: background linear 0.4s;
+}
+.button_light:hover {
+  background-color: #fff;
+  color: #37a5ca;
+
+  transition: background linear 0.4s;
+}
+.trace_light:before {
+  display: block;
+  content: "";
+  width: 80px;
+  height: 3px;
+  margin-bottom: 20px;
+
+  background-color: #fff;
+}
+/* ------------------------------------------------------------------------------------- */
+
+.header {
+  width: 100%;
+  height: 80px;
+  padding: 0 20px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  background-color: #fff;
+}
+.container_header {
+  width: 1170px;
+  margin: 0 auto;
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.header nav ul {
+  display: flex;
+}
+.header nav ul li a {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  letter-spacing: 0.1px;
+  text-transform: uppercase;
+
+  padding: 10px;
+
+  color: #0009;
+  transition: linear 0.2s;
+}
+.header nav ul li a:hover {
+  color: #26748f;
+  transition: linear 0.2s;
+}
+
+/* ------------------------- */
+
+.banner_content {
+  width: 100%;
+  height: 400px;
+  padding: 0 20px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+
+  background-image: url("../img/Banner.png");
+  background-size: cover;
+  background-position: center;
+}
+.banner_content article {
+  width: 600px;
+}
+.banner_content article p {
+  font-size: 28px;
+  line-height: 34px;
+  padding: 20px 0;
+
+  color: #fff;
+}
