--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a {
 }
 /* Container padrão */
 .container {
-  width: 1170px;
+  width: 960px;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -83,12 +83,13 @@ a {
 }
 /* ---------------------------------------------------------- */
 /* Traço em cima do título */
+
 .trace_light:before {
   display: block;
   content: "";
   width: 80px;
   height: 3px;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 
   background-color: #fff;
 }
@@ -106,7 +107,7 @@ a {
 .header {
   width: 100%;
   height: 80px;
-  padding: 0 20px;
+  padding: 0 40px;
 
   display: flex;
   flex-direction: row;
@@ -115,7 +116,7 @@ a {
   background-color: #fff;
 }
 .container_header {
-  width: 1170px;
+  width: 960px;
   margin: 0 auto;
   box-sizing: border-box;
 
@@ -148,7 +149,7 @@ a {
 .banner_content {
   width: 100%;
   height: 400px;
-  padding: 0 20px;
+  padding: 0 40px;
 
   display: flex;
   flex-direction: row;
@@ -158,6 +159,7 @@ a {
   background-image: url("../img/Banner.png");
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 .banner_content article {
   width: 600px;
@@ -170,12 +172,15 @@ a {
 
   color: #fff;
 }
+.banner_content article h1::before {
+  margin-bottom: 20px;
+}
 /* --------------------------------------------------- */
 
 .wallet {
   width: 100%;
   height: 400px;
-  padding: 0 20px;
+  padding: 0 40px;
 
   display: flex;
   flex-direction: row;
@@ -221,3 +226,69 @@ a {
   height: 100%;
 }
 /* ------------------------------------------------ */
+.schedule {
+  width: 100%;
+  height: 500px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 40px;
+  margin-bottom: 150px;
+
+  background-image: url("/img/bg_agendamento.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.schedule h3 {
+  font-size: 28px;
+  font-weight: 400;
+  color: #fff;
+
+  margin-bottom: 20px;
+}
+.schedule ul {
+  width: 960px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.schedule ul li {
+  width: 300px;
+  height: 350px;
+  padding: 30px 20px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: #fff;
+  border-radius: 7px 0;
+}
+.schedule ul li h4 {
+  font-size: 20px;
+  font-weight: 400;
+  color: #000;
+}
+.schedule ul li article {
+  padding: 20px 0;
+}
+.schedule ul li p {
+  font-size: 14px;
+  font-weight: lighter;
+
+  color: #164352;
+}
+.schedule ul li p:first-child {
+  margin-bottom: 20px;
+}
+.schedule ul li p span {
+  color: #28a3cb;
+}
