--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,8 @@ a {
   transition: background linear 0.4s;
 }
 .button_dark {
-  width: 200px;
+  width: 100%;
+  max-width: 200px;
   height: 45px;
 
   display: flex;
@@ -107,7 +108,7 @@ a {
 .header {
   width: 100%;
   height: 80px;
-  padding: 0 40px;
+  padding: 0 20px;
 
   display: flex;
   flex-direction: row;
@@ -149,7 +150,7 @@ a {
 .banner_content {
   width: 100%;
   height: 400px;
-  padding: 0 40px;
+  padding: 0 20px;
 
   display: flex;
   flex-direction: row;
@@ -180,7 +181,7 @@ a {
 .wallet {
   width: 100%;
   height: 400px;
-  padding: 0 40px;
+  padding: 0 20px;
 
   display: flex;
   flex-direction: row;
@@ -235,7 +236,7 @@ a {
   align-items: center;
   justify-content: center;
 
-  padding: 0 40px;
+  padding: 0 20px;
   margin-bottom: 150px;
 
   background-image: url("/img/bg_agendamento.png");
@@ -252,12 +253,12 @@ a {
   margin-bottom: 20px;
 }
 .schedule ul {
-  width: 960px;
+  width: 100%;
 
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 .schedule ul li {
   width: 300px;
@@ -272,13 +273,19 @@ a {
   background-color: #fff;
   border-radius: 7px 0;
 }
+.schedule ul li:nth-child(2) {
+  margin: 0 15px;
+}
 .schedule ul li h4 {
   font-size: 20px;
   font-weight: 400;
   color: #000;
+
+  padding-bottom: 20px;
 }
 .schedule ul li article {
-  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
 }
 .schedule ul li p {
   font-size: 14px;
@@ -286,7 +293,7 @@ a {
 
   color: #164352;
 }
-.schedule ul li p:first-child {
+.schedule ul li:first-child p:first-child {
   margin-bottom: 20px;
 }
 .schedule ul li p span {
