--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,6 @@ a {
   justify-content: center;
 
   padding: 0 20px;
-  margin-bottom: 150px;
 
   background-image: url("../img/bg_agendamento.png");
   background-position: center;
@@ -303,3 +302,60 @@ a {
   color: #28a3cb;
 }
 /* ---------------------- */
+.utility {
+  width: 100%;
+  height: 400px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 20px;
+  margin-bottom: 150px;
+}
+.utility h3 {
+  font-size: 28px;
+  font-weight: 400;
+  color: #164352;
+
+  margin-bottom: 20px;
+}
+
+.utility ul {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.utility ul li {
+  width: 960px;
+  height: 260px;
+  padding: 20px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+.utility ul li article {
+  padding-right: 20px;
+}
+.utility ul li article h4 {
+  font-size: 20px;
+  font-weight: 400;
+  color: #164352;
+
+  padding-bottom: 20px;
+}
+.utility ul li article p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000;
+}
+/* ------------------------ */
