--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,6 @@ a {
   justify-content: center;
 
   padding: 0 20px;
-  margin-bottom: 150px;
 }
 .utility h3 {
   font-size: 28px;
@@ -359,3 +358,74 @@ a {
   color: #000;
 }
 /* ------------------------ */
+.services {
+  width: 100%;
+  height: 450px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 20px;
+  margin-bottom: 150px;
+}
+
+.services h3 {
+  font-size: 28px;
+  font-weight: 400;
+  color: #164352;
+
+  margin-bottom: 20px;
+}
+.services ul {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.services ul li {
+  width: 220px;
+  height: 320px;
+  padding: 30px 20px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+.services ul li:nth-child(2) {
+  margin: 0 10px 0 20px;
+}
+.services ul li:nth-child(3) {
+  margin: 0 20px 0 10px;
+}
+.services ul li h4 {
+  font-weight: 400;
+  font-size: 18px;
+  color: #28a3cb;
+}
+.services ul li div {
+  width: 35%;
+  height: 20%;
+
+  position: relative;
+  /* background: royalblue; */
+}
+.services ul li div img {
+  width: 100%;
+  height: 100%;
+}
+.services ul li p {
+  font-weight: 400;
+  font-size: 14px;
+  color: #000;
+}
+.services ul li p span{
+  color: #28A3CB;
+}
