--- a/css/style.css
+++ b/css/style.css
@@ -433,3 +433,55 @@ a {
   color: #28a3cb;
 }
 /* ---------------------------- */
+.who_we_are {
+  position: relative;
+  width: 100%;
+  height: 400px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+
+  margin: 30px 0 150px;
+  padding: 0 20px;
+  background-color: #147bb2;
+}
+
+.who_we_are h3 {
+  font-weight: 400;
+  font-size: 28px;
+  color: #fff;
+
+  margin-top: 60px;
+}
+.who_we_are ul {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.who_we_are li {
+  width: 600px;
+  height: 300px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  padding: 40px;
+  margin-top: 30px;
+
+  background-color: #fff;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+}
+.who_we_are ul li p {
+  font-size: 16px;
+  font-weight: 400;
+}
+.who_we_are ul li p:nth-child(2) {
+  margin-top: 20px;
+}
