--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -5,6 +5,11 @@
 }
 
 @media only screen and (max-width: 766px) {
+  header {
+    position: relative;
+    z-index: auto;
+    box-shadow: 0px 0px 0.65rem rgba(0, 0, 0, 0);
+  }
   header .container_header nav .button_logo {
     width: 100%;
     display: flex;
