--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,9 @@ header {
   width: 100%;
   height: 5rem;
   padding: 0 1.25rem;
+  position: fixed;
+  z-index: 1;
+  box-shadow: 0px 0px 0.65rem rgba(0, 0, 0, 0.2);
 
   display: flex;
   align-items: center;
